tests/__snapshots__/validation-if-target-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'target' option must be a string.

  1 | // @tstyche if { target: ["5.6"] }
    |                          ~~~~~~~
  2 | 
  3 | import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:26

